Update weekly report date format for clarity

--- a/src/content/news/weekly-13-06-2025.md
+++ b/src/content/news/weekly-13-06-2025.md
@@ -14,7 +14,7 @@ tags: ["weekly", "magic"]
 - **Третій Вузол**
 - **Четвертий Вузол**
 
-Наступне оновлення буде рівно через тиждень, о **15:00 21.06.2025**!
+Наступне оновлення буде рівно через тиждень, **21.06.2025**!
 
 # 🐞 Щотижневий звіт про проблеми
 Короткий дайджест усього, що сталось [у форумі](https://discord.com/channels/1221552838807654450/1311698848095277127) за цей тиждень:
