Fix image paths in documentation for Evervault and update markdown configuration

--- a/src/content/news/weekly-21-06-2025.md
+++ b/src/content/news/weekly-21-06-2025.md
@@ -34,7 +34,7 @@ tags: ["weekly", "magic"]
 - Анкета на Evervault ✨
 - і багато іншого!
 
-![Оновлена головна сторінка](../img/new-site-1.png)
+![Оновлена головна сторінка](../../../public/img/new-site-1.png)
 
 Ми плануємо запустити оновлення протягом наступних кількох днів / за готовності. Слідкуйте за новинами в Discord, щоб не пропустити важливі зміни!
 
@@ -48,7 +48,7 @@ tags: ["weekly", "magic"]
 - Забезпечити кращу інтеграцію з Discord та іншими сервісами
 - Забезпечити кращу безпеку та захист від атак
 
-![Оновлена серверна частина](../img/new-site-2.png)
+![Оновлена серверна частина](../../../public/img/new-site-2.png)
 
 І хоча це не вплине на гравців безпосередньо, ми сподіваємося, що це дозволить нам розвивати UAProject ще швидше та якісніше.
 
